--- a/console/chain/build-local.yml
+++ b/console/chain/build-local.yml
@@ -9,7 +9,7 @@ commands:
       uri: 'http://default'
     arguments:
       profile: standard
-  - command: 'config:import'
+  #- command: 'config:import'
   # Cache clear
   - command: 'cache:rebuild'
     arguments:
