--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
+        "drupal/config_suite": "1.x-dev",
         "drupal/console": "~1.0",
         "drupal/core": "8.4.0",
         "drush/drush": "~8.0",
