--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,12 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
+        "drupal/admin_toolbar": "^1.21",
+        "drupal/config_split": "^1.3",
         "drupal/config_suite": "1.x-dev",
         "drupal/console": "~1.0",
         "drupal/core": "8.4.0",
+        "drupal/stage_file_proxy": "^1.0@alpha",
         "drush/drush": "~8.0",
         "vlucas/phpdotenv": "^2.3",
         "webflo/drupal-finder": "^1.0.0",
