--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 8bc07824-18b6-406f-9772-ec6b3c14a1ea
-name: 'Drupal 8'
+name: 'And this also works :P '
 mail: admin@example.org
 slogan: ''
 page:
